micro-depls/00-core-connectivity-k8s/k8s-config/manifests/08-ingress-nginx/jcr-1-nginx-ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: jcr-1
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  tls:
    passthrough: true
  routes:
  #web ui
  - match: HostSNI(`jcr-1-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ingress-nginx-controller
      kind: Service
      namespace: ingress-nginx
      port: 443
