micro-depls/00-core-connectivity-k8s/k8s-config/manifests/08-ingress-nginx/jcr-nginx-ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: jcr
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  tls:
    passthrough: true
  routes:
  #web ui
  - match: HostSNI(`jcr-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ingress-nginx-controller
      kind: Service
      namespace: ingress-nginx
      port: 443
  #docker
  - match: HostSNI(`docker.jcr-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ingress-nginx-controller
      kind: Service
      namespace: ingress-nginx
      port: 443
  #docker quay.io
  - match: HostSNI(`quay-io.jcr-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ingress-nginx-controller
      kind: Service
      namespace: ingress-nginx
      port: 443
