micro-depls/00-core-connectivity-k8s/k8s-config/manifests/08-ingress-nginx/ops-portal-nginx-ingressroutetcp.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ops-portal
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  tls:
    passthrough: true
  routes:
    - match: HostSNI(`ops-portal.((/secrets/cloudfoundry_ops_domain))`)
      kind: Rule
      priority: 10
      services:
        - name: ingress-nginx-controller
          kind: Service
          namespace: ingress-nginx
          port: 443
